# comp-grafica

./: .gitignore  CMakeLists.txt  Menu.cpp  Menu.h  OpenGLWindow.h  PolygonDrawer.cpp  PolygonDrawer.h  main.cpp  new.cpp  test.cpp  test_glut  test_glut.cpp  testopengl
